UX: fix missing text overflow ellipsis in chat index pages

--- a/plugins/chat/assets/stylesheets/common/chat-channel-name.scss
+++ b/plugins/chat/assets/stylesheets/common/chat-channel-name.scss
@@ -7,16 +7,13 @@
   }
 
   &__label {
-    display: flex;
-    align-items: center;
-    white-space: nowrap;
-    gap: 0.5rem;
+    @include ellipsis;
   }
 
   .emoji {
     height: 1em;
     width: 1em;
-    vertical-align: baseline;
+    vertical-align: middle;
   }
 
   .chat-channel-unread-indicator {
